fix card overflow in search results

--- a/theme/extras/_search.scss
+++ b/theme/extras/_search.scss
@@ -39,5 +39,9 @@
 .search-results-wrapper {
   .card.card-teaser {
     height: 100%;
+
+    .card-body {
+      max-width: 100%;
+    }
   }
 }
